posiGen_FullsendBox/src/objects/Census_Tract__c.object
<CustomObject>
    <fields>
        <fullName>ACS_Median_Income_Type__c</fullName>
        <label>ACS Median Income Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACS_Median_Income__c</fullName>
        <label>ACS Median Income</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Census_Tract__c</fullName>
        <externalId>true</externalId>
        <label>Census Tract</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tract_Description__c</fullName>
        <label>Tract Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Census Tract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tract_Description__c</columns>
        <columns>ACS_Median_Income__c</columns>
        <columns>ACS_Median_Income_Type__c</columns>
        <columns>Census_Tract__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CT{000000}</displayFormat>
        <label>Census Tract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Census Tracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>